# my-http-client

./: Cargo.toml
src/: error.rs  headers.rs  hyper.rs  lib.rs  my_http_client.rs  my_http_client_connector.rs  my_http_client_disconnect.rs  my_http_client_inner.rs  my_http_request.rs  my_http_request_builder.rs  read_loop.rs  utils.rs
src/body_reader/: body_reader_chunked.rs  full_body_reader.rs
src/headers_reader/: headers_reader.rs  parse_http_header.rs
src/http1/: into_hyper_request.rs  mod.rs  my_http_client.rs  my_http_client_connection_context.rs  my_http_client_inner.rs  my_http_client_metrics.rs  my_http_request.rs  my_http_request_builder.rs  my_http_response.rs  queue_of_requests.rs  read_loop.rs  read_with_timeout.rs  response_framing_tests.rs  tcp_buffer.rs  write_loop.rs
src/http1/body_reader/: body_reader.rs  body_reader_chunked.rs  full_body_reader.rs  mod.rs  until_close_body_reader.rs
src/http1/headers_reader/: headers_reader.rs  mod.rs  parse_http_header.rs  parse_http_response_first_line.rs
src/http1_hyper/: mod.rs  my_http_hyper_client.rs  my_http_hyper_client_inner.rs  wrap_http1_endpoint.rs
src/http2/: mod.rs  my_http2_client.rs  my_http2_client_inner.rs  my_http2_client_metrics.rs  wrap_http2_endpoint.rs
