[package]
name = "my-http-client"
version = "0.1.1"
edition = "2021"

[features]
default = []
metrics = []


[dependencies]
tokio = { version = "*", features = ["full"] }
bytes = "*"
http-body-util = "*"
async-trait = "*"

lazy_static = "*"

hyper-tungstenite = "*"
http = "*"

hyper-util = { version = "*", features = ["tokio", "server", "http2"] }

futures = "*"

hyper = { version = "*", features = ["full"] }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }
